# insta

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  analyze_bookmarks.py  download_articles.py  paywalled_sites.py
.beads/: issues.jsonl
src/: cli.rs  csv_reader.rs  db.rs  extractor.rs  filename.rs  main.rs  paywall.rs
src/extractors/: archive.rs  github.rs  instapaper.rs  mod.rs  readability.rs  youtube.rs
src/html_extract/: cleaning.rs  jsonld.rs  mod.rs  scoring.rs
src/trafilatura/: cleaning.rs  jsonld.rs  mod.rs  scoring.rs
