[package]
name = "instapaper-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "instapaper-dl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
readability = "0.3"
indicatif = "0.17"
url = "2"
base64 = "0.22"
anyhow = "1"
regex = "1"
tempfile = "3"
rayon = "1"
scraper = "0.22"
ego-tree = "0.10"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
